# PC-Parts-Tracker

./: .gitignore  LICENSE  README.md  excel_to_json.py  main.py  pyproject.toml  requirements.txt
database/: database.py  models.py
gui/: build_window.py  history_window.py  main_window.py  price_entry.py  product_dialog.py  settings_dialog.py
providers/: base.py  json_source.py  manager.py  mercadolibre.py  mercadolibre_api.py
repositories/: build_repository.py  history_repository.py  product_repository.py
services/: build_service.py  notification_service.py  price_updater.py
tests/: test_database.py  test_excel.py  test_providers.py
utils/: cache.py  config.py  excel.py  logger.py
