[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pc-parts-tracker"
version = "0.2.0"
description = "Track PC component prices from MercadoLibre Colombia"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "YacaloX Studios"}]
dependencies = [
    "pcbuilding-core @ git+https://github.com/YacaloX-Studios/pcbuilding-core.git@main",
    "customtkinter>=5.4.0",
    "sqlalchemy>=2.0.0",
    "playwright>=1.40.0",
    "openpyxl>=3.1.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["database", "repositories", "services", "providers", "utils", "gui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
